# libwolkanlin

./: CMakeLists.txt  Messages.sh  README.md
.tx/: config
Wolkanlin/: CMakeLists.txt  DeleteAppPasswordJob  GetAppPasswordJob  GetServerStatusJob  GetUserJob  GetUserListJob  GetWipeStatusJob  Quota  ServerStatus  abstractconfiguration.cpp  abstractconfiguration.h  abstractnamfactory.cpp  abstractnamfactory.h  deleteapppasswordjob.cpp  deleteapppasswordjob.h  deleteapppasswordjob_p.h  getapppasswordjob.cpp  getapppasswordjob.h  getapppasswordjob_p.h  getserverstatusjob.cpp  getserverstatusjob.h  getserverstatusjob_p.h  getuserjob.cpp  getuserjob.h  getuserjob_p.h  getuserlistjob.cpp  getuserlistjob.h  getuserlistjob_p.h  getwipestatusjob.cpp  getwipestatusjob.h  getwipestatusjob_p.h  global.cpp  global.h  job.cpp  job.h  job_p.h  logging.h  quota.cpp  quota.h  quota_p.h  (+11 more)
cmake/modules/: wolkanlin-config-version.cmake.in  wolkanlin-config.cmake.in
dox/examples/: get-server-status-async.cpp  get-server-status-sync.cpp  get-user-async.cpp  get-user-list-async.cpp  get-user-list-sync.cpp  get-user-sync.cpp  server-status-example.json  server-status-get-function.cpp  user-get-function.cpp  userdata-example.json  userlist-example.json
tests/: CMakeLists.txt  testapicalls.cpp  testconfig.cpp  testconfig.h  testdefaultvalues.cpp  testjobs.cpp  testnamfactory.cpp  testnamfactory.h  testquotaobject.cpp  testserverstatusobject.cpp  testuserobject.cpp
translations/: CMakeLists.txt  libwolkanlin.ts  libwolkanlin_de.ts
